feat: finish glitchy text :raised_hands:

--- a/src/glitchy-text-effects/dev.pug
+++ b/src/glitchy-text-effects/dev.pug
@@ -1,4 +1,4 @@
-- const glitches = ['Scroll for glitches', 'Glitch', 'Glitch', 'Glitch', 'Glitch']
+- const glitches = ['SCROLL FOR GLITCHES', ...new Array(12).fill('GLITCH')]
 
 .container
   - const glitchCount = glitches.length
