--- a/src/baby-yoda/index.pug
+++ b/src/baby-yoda/index.pug
@@ -1,3 +1,7 @@
 extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
+  script(src='https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js')
+  script(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/35984/ScrubGSAPTimeline_3_0.js')
+  //- script(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js')
+  //- script(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathHelper.min.js?v=46')
