feat: glitchy text reveal update

--- a/src/glitchy-text-reveal/dev.pug
+++ b/src/glitchy-text-reveal/dev.pug
@@ -1,9 +1,10 @@
-- const glitches = ['Scroll for variants', 'All together now', 'Random iteration count']
+- const glitches = ['This is cool', 'Got 3 minutes?', 'Glitchy Text Reveal!']
 
 .container
   - const glitchCount = glitches.length
   - let g = 0
   while g < glitchCount
     .page
-      p(data-scroll='out', data-splitting='', class=`reveal--${g}`)= glitches[g]
+      p= glitches[g]
+      p(aria-hidden='true' data-scroll='out', data-splitting='', class=`reveal--${g}`)= glitches[g]
       - g++
