--- a/src/threejs-supreme-bauble/index.pug
+++ b/src/threejs-supreme-bauble/index.pug
@@ -2,6 +2,7 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js')
+  script(src='https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js')
-  script(src='http://threejs.org/examples/js/controls/OrbitControls.js')
+  script(src='https://threejs.org/examples/js/controls/OrbitControls.js')
   script(src='http://threejs.org/examples/js/controls/DragControls.js')
