feat: fix background-image sizing

--- a/src/glitchy-image-reveal/style.styl
+++ b/src/glitchy-image-reveal/style.styl
@@ -31,6 +31,7 @@ body
       content ''
       animation glitch-switch calc(var(--speed, 0.2) * 1s) calc(var(--delay, 0.5) * 1s) var(--count) backwards steps(1)
       background-image var(--src)
+      background-size calc(var(--size) * 1px) calc(var(--size) * 1px)
       position absolute
       top 0
       left 0
