--- a/src/full-page-sat-nav/style.styl
+++ b/src/full-page-sat-nav/style.styl
@@ -5,23 +5,135 @@ body
   background-color #663399
   font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   min-height 100vh
+  padding 0
+  margin 0
 
-.content
+// Used to make the button the right size
+.filler
+  width 100vmin
+  transform-origin left bottom
+
+.page-content
   height 100vh
   overflow-x hidden
   overflow-y auto
+  // Cant include nice scrolling as it
+  // introduces a weird rendering error...
+  // -webkit-overflow-scrolling touch
+  scroll-snap-type y mandatory
 
-.page
+section
   height 100vh
   font-size 4rem
   color white
   display flex
   align-items center
   justify-content center
+  font-weight bold
+  scroll-snap-align center
 
 .sat-nav
-  position absolute
-  top 50%
-  left 50%
-  transform translate(-50%, -50%)
+  position fixed
+  bottom 1rem
+  left 1rem
+  transform scale(0.125)
+  transform-origin left bottom
   width 100vmin
+
+  &__open
+    cursor pointer
+    position fixed
+    appearance none
+    opacity 0
+    bottom 1rem
+    left 1rem
+    z-index 5
+    transform scale(0.125)
+    transform-origin left bottom
+
+  &__path
+    stroke 'hsla(175, 100%, 50%, %s)' % var(--active, 0)
+    transition all .15s
+
+  &__close
+    --fill #fff
+    --stroke #000
+    cursor pointer
+    height 50px
+    width 50px
+    opacity var(--opacity, 1)
+    transition all .15s
+
+    circle
+      fill var(--fill)
+
+    path
+      stroke var(--stroke)
+
+    circle
+    path
+      transition all .15s
+
+    &:hover
+      --fill #000
+      --stroke #fff
+
+  &__backdrop
+    position fixed
+    top 0
+    right 0
+    bottom 0
+    left 0
+    backdrop-filter blur(10px)
+    display none
+    opacity 0
+
+  &__destination-title
+    font-weight bold
+    font-family sans-serif
+    font-size 10px
+    opacity var(--opacity, 0)
+    transition all .15s
+
+  &__location-marker
+    --saturation 75
+    cursor pointer
+    font-weight normal
+    font-family sans-serif
+    font-size 10px
+    fill #999
+
+    path:first-of-type
+      fill 'hsl(%s, %s, 50%)' % (var(--hue, 0) calc(var(--saturation, 100) * 1%))
+
+  &__destination-link
+    &--active
+      .sat-nav__location-marker
+        --saturation 100
+        --hue 185
+        fill #000
+
+    &:hover
+      + .sat-nav__destination-title
+        --opacity 1
+      .sat-nav__location-marker
+        --saturation 100
+        fill #000
+
+
+
+
+  &__lcd
+    opacity 0
+
+  &__power-led
+    fill 'hsl(%s, 100%, 50%)' % var(--hue, 0)
+
+section:nth-of-type(1)
+  background hsl(210, 80%, 70%)
+section:nth-of-type(2)
+  background hsl(15, 80%, 70%)
+section:nth-of-type(3)
+  background hsl(250, 80%, 70%)
+section:nth-of-type(4)
+  background hsl(0, 80%, 70%)
