--- a/src/full-page-sat-nav/index.pug
+++ b/src/full-page-sat-nav/index.pug
@@ -2,3 +2,4 @@ extends ../../boilerplate/layout.boilerplate.pug
 block content
   include dev.pug
   script(src='https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js')
+  script(src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollToPlugin3.min.js')
