--- a/src/gooey-css-full-page-menu/style.styl
+++ b/src/gooey-css-full-page-menu/style.styl
@@ -66,7 +66,7 @@ section
     position absolute
     top 0
     left 0
-    transition all calc(var(--speed, 1) * 1s) var(--ease)
+    transition backdrop-filter calc(var(--speed, 1) * 1s) var(--ease), clip-path 0s, -webkit-clip-path 0s
 
     &--closer
       z-index 3
