--- a/src/newtons-light-bulb/style.styl
+++ b/src/newtons-light-bulb/style.styl
@@ -11,6 +11,7 @@
   --fitting-lightness 80
   --light-alpha 0
   --ceiling 40
+  --bulb-hue 60
 
 
   @media(prefers-color-scheme: dark)
@@ -52,8 +53,8 @@ svg
     stroke 'hsl(0, 0%, %s)' % calc(var(--chord-lightness) * 1%)
 
   &__glass
-    fill 'hsla(60, 100%, 50%, %s)' % var(--light-alpha)
-    stroke 'hsla(60, %s, %s, 1)' % (calc(var(--glass-saturation) * 1%) calc(var(--glass-lightness) * 1%))
+    fill 'hsla(%s, 100%, 50%, %s)' % (var(--bulb-hue) var(--light-alpha))
+    stroke 'hsla(%s, %s, %s, 1)' % (var(--bulb-hue) calc(var(--glass-saturation) * 1%) calc(var(--glass-lightness) * 1%))
 
   &__filament
     fill none
@@ -67,5 +68,55 @@ svg
 
   &__bloom
     fill none
-    stroke 'hsl(60, 100%, 50%)'
+    stroke 'hsl(%s, 100%, 50%)' % var(--bulb-hue)
     stroke-width 2
+
+
+// EASTER EGG
+[type='checkbox']
+  position fixed
+  bottom 1rem
+  opacity .1
+
+  &:nth-of-type(1)
+    right 1rem
+
+    &:checked ~ .wrapper svg
+      .light-bulb:nth-of-type(odd)
+        --bulb-hue 90
+      .light-bulb:nth-of-type(even)
+        --bulb-hue 0
+
+  &:nth-of-type(2)
+    right 2rem
+
+    &:checked ~ .wrapper svg
+      .light-bulb--1
+        --bulb-hue 0
+      .light-bulb--2
+        --bulb-hue 30
+      .light-bulb--3
+        --bulb-hue 60
+      .light-bulb--4
+        --bulb-hue 90
+      .light-bulb--5
+        --bulb-hue 200
+      .light-bulb--6
+        --bulb-hue 270
+
+  &:nth-of-type(3)
+    right 3rem
+
+    &:checked ~ .wrapper svg
+      .light-bulb--1
+        --bulb-hue 60
+      .light-bulb--2
+        --bulb-hue 120
+      .light-bulb--3
+        --bulb-hue 180
+      .light-bulb--4
+        --bulb-hue 240
+      .light-bulb--5
+        --bulb-hue 300
+      .light-bulb--6
+        --bulb-hue 360
