--- a/src/lisajous-canvas/style.styl
+++ b/src/lisajous-canvas/style.styl
@@ -8,7 +8,21 @@ body
   margin 0
   min-height 100vh
   justify-content center
+  overflow hidden
 
 canvas
-  height 300px
-  width 300px
+  height 50vmin
+  width 50vmin
+  max-height 600px
+  max-width 600px
+  min-height 300px
+  min-width 300px
+  transition transform .25s ease
+  transform translate(calc(var(--x, 0) * 1%), calc(var(--y, 0) * 1%))
+
+canvas.showcase
+  --x -17.5
+  --y -17.5
+
+#__bs_notify__
+  display none !important
